main/bin/main.69182.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/home/leifu/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:21:44: error: too many arguments to function call, expected 2, have 4
        printf("%d\n", CalcPersonInf(1, 2, P, Hosts));
                       ~~~~~~~~~~~~~       ^~~~~~~~
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/calculate.h:4:1: note: 'CalcPersonInf' declared here
double CalcPersonInf(int j, unsigned short int ts);
^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
